--- a/views/kucuncelue.xml
+++ b/views/kucuncelue.xml
@@ -8,7 +8,8 @@
         <tree create="false" delete="false">
           <field name="cangku"/>
           <field name="beijianext"/>
-          <field name="zaikushuliang"/>
+          <field name="keyongshuliang"/>
+          <field name="bukeyongshuliang"/>
           <field name="xiaxianbaojing" invisible="1"/>
           <field name="xiaxian"/>
           <field name="shangxianbaojing" invisible="1"/>
@@ -43,7 +44,8 @@
                 <h3><field name="cangku" readonly="1"/></h3>
             </div>
             <group>
-              <field name="zaikushuliang" readonly="1"/>
+              <field name="keyongshuliang" readonly="1"/>
+              <field name="bukeyongshuliang" readonly="1"/>
             </group>
             <group>
               <field name="xiaxianbaojing" default_focus="1"/>
