--- a/views/templates.xml
+++ b/views/templates.xml
@@ -15,6 +15,9 @@
         <xpath expr='//script[@src="/web/static/src/js/views/basic/basic_model.js"]' position='replace'>
             <script type="text/javascript" src="/wms/static/src/js/basic_model.js"></script>
         </xpath>
+        <!-- <xpath expr='//script[@src="/web/static/src/js/chrome/user_menu.js"]' position='replace'>
+            <script type="text/javascript" src="/wms/static/src/js/user_menu.js"></script>
+        </xpath> -->
         <!-- <xpath expr='//script[@src="/web/static/src/js/fields/basic_fields.js"]' position='replace'>
             <script type="text/javascript" src="/wms/static/src/js/basic_fields.js"></script>
         </xpath> -->
