--- a/views/geti.xml
+++ b/views/geti.xml
@@ -25,8 +25,7 @@
         <form create="false" edit="false">
           <sheet>
               <div class="oe_button_box" name="button_box">
-                <button class="oe_stat_button" name="chuku" icon="fa-eject" type="object" attrs="{'invisible': [('zhuangtai', 'not in', ('zaiku', 'daibaofei', 'daijiance'))]}"
-                confirm="此操作不可撤销，是否继续出库？    (如误操作，请联系系统管理员。)">
+                <button class="oe_stat_button" name="%(wms.chuku_wizard_act_window)d" icon="fa-eject" type="action" attrs="{'invisible': [('zhuangtai', 'not in', ('zaiku', 'daibaofei', 'daijiance'))]}" context="{'geti': active_id}">
                     <div class="o_field_widget o_stat_info">
                         <span class="o_stat_text">出库</span>
                     </div>
