--- a/views/chuku_wizard.xml
+++ b/views/chuku_wizard.xml
@@ -25,6 +25,7 @@
                 <button name="continues" string="继续" type="object" class="btn-primary enter_to_submit_button"  attrs="{'invisible': [('state', '!=', 'confirm')]}"/>
                 <button name="save_chuku" string="保存" type="object" class="btn-primary enter_to_submit_button" attrs="{'invisible': [('state', '!=', 'dest')]}"/>
                 <button string="取消" class="btn-default" special="cancel"  attrs="{'invisible': [('state', '=', 'complete')]}"/>
+                <button string="关闭" class="btn-primary" special="save"  attrs="{'invisible': [('state', '!=', 'complete')]}"/>
             </footer>
           </form>
         </field>
