--- a/views/geti.xml
+++ b/views/geti.xml
@@ -49,6 +49,13 @@
                         <span class="o_stat_text">回库</span>
                     </div>
                 </button>
+                <button class="oe_stat_button" name="%(wms.yiku_wizard_act_window)d"
+                  type="action" icon="fa-home" context="{'geti': id}"
+                  attrs="{'invisible': [('zhuangtai', 'not in', ('zaiku', 'daibaofei', 'daijiance'))]}">
+                    <div class="o_field_widget o_stat_info">
+                        <span class="o_stat_text">移库</span>
+                    </div>
+                </button>
             </div>
             <field name="cangku" invisible="1"/>
             <field name="image" widget="zoomable_image" class="oe_avatar"/>
