--- a/views/menu_items.xml
+++ b/views/menu_items.xml
@@ -8,6 +8,7 @@
 
     <menuitem name="库存报警" id="wms.menu_kucunbaojing" parent="wms.menu_root" action="kucunbaojing_act_window"/>
     <menuitem name="检测报警" id="wms.menu_jiancebaojing" parent="wms.menu_root" action="jiancebaojing_act_window"/>
+    <menuitem name="待移库" id="wms.menu_daiyiku" parent="wms.menu_root" action="daiyiku_act_window"/>
     <menuitem name="备件个体档案" id="wms.menu_geti" parent="wms.menu_root" action="geti_act_window"/>
     <menuitem name="备件库存策略" id="wms.menu_kucuncelue" parent="wms.menu_root" action="kucuncelue_act_window"/>
 
