--- a/views/geti.xml
+++ b/views/geti.xml
@@ -50,7 +50,7 @@
                     </div>
                 </button>
                 <button class="oe_stat_button" name="%(wms.yiku_wizard_act_window)d"
-                  type="action" icon="fa-home" context="{'geti': id}"
+                  type="action" icon="fa-truck" context="{'geti': id}"
                   attrs="{'invisible': [('zhuangtai', 'not in', ('zaiku', 'daibaofei', 'daijiance'))]}">
                     <div class="o_field_widget o_stat_info">
                         <span class="o_stat_text">移库</span>
