--- a/views/geti.xml
+++ b/views/geti.xml
@@ -80,6 +80,7 @@
               <group>
                 <field name="changjia" readonly="1"/>
                 <field name="pihao" readonly="1"/>
+                <field name="changbianhao" readonly="1"/>
               </group>
               <group>
                 <field name="shengchanriqi" readonly="1"/>
